# walksnail-osd-tool

./: .gitignore  CHANGELOG.md  Cargo.toml  FFMPEG.md  README.md  build.sh  build_linux.sh  build_macos.sh
.github/workflows/: build.yaml  ci.yaml  release.yaml
_deploy/windows/wix/: main.wxs
backend/: Cargo.toml
backend/src/: config.rs  util.rs
backend/src/ffmpeg/: encoders.rs  error.rs  message.rs  mod.rs  render.rs  render_settings.rs  video_info.rs
backend/src/font/: dimensions.rs  font_file.rs  mod.rs
backend/src/osd/: frame.rs  mod.rs  options.rs
backend/src/overlay/: iter.rs  mod.rs  osd.rs  srt.rs
backend/src/srt/: error.rs  frame.rs  mod.rs  options.rs  srt_file.rs
ui/: Cargo.toml
ui/src/: app.rs  bottom_panel.rs  central_panel.rs  main.rs  osd_preview.rs  render_status.rs  side_panel.rs  top_panel.rs  util.rs
